--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/logo.WebP">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!---Font--->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -68,10 +68,10 @@
                     <h6>WEB DESIGNER<br><h6>Soon to be a Full Stack Developer</h6>
                     <div class="row">
                       <div class="col-md-12 text-white">
-                        <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"><i class="fab fa-linkedin p-3"></i></a>
-                        <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope p-3"></i></a>
-                        <a href="https://www.facebook.com/settings?tab=account&section=username"><i class="fab fa-facebook p-3"></i>
-                        <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram p-3"></i></a>
+                        <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D" aria-label="Linkedin"><i class="fab fa-linkedin p-3"></i></a>
+                        <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope p-3"  aria-label="email"></i></a>
+                        <a href="https://www.facebook.com/settings?tab=account&section=username"  aria-label="facebook"><i class="fab fa-facebook p-3"></i>
+                        <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram p-3"  aria-label="instagram"></i></a>
                       </div>
                     </div>
                 </div>
@@ -247,10 +247,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12 text-center text-white">
-                      <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"><i class="fab fa-linkedin mr-2"></i></a>
-                      <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope mr-2"></i></a>
-                      <a href="https://www.facebook.com/settings?tab=account&section=username"><i class="fab fa-facebook mr-2"></i>
-                      <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram"></i></a>
+                      <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"  aria-label="Linkedin"><i class="fab fa-linkedin mr-2"></i></a>
+                      <a href="g.ananthakrishnabhat@gmail.com"  aria-label="email"><i class="fas fa-envelope mr-2"></i></a>
+                      <a href="https://www.facebook.com/settings?tab=account&section=username"  aria-label="facebook"><i class="fab fa-facebook mr-2"></i>
+                      <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram"  aria-label="instagram"></i></a>
                       <p>Copyrights</p>
                     </div>
                   </div>
