--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     <div class="row">
                       <div class="col-md-12 text-white">
                         <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D" aria-label="Linkedin"><i class="fab fa-linkedin p-3"></i></a>
-                        <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope p-3"  aria-label="email"></i></a>
+                        <a href="g.ananthakrishnabhat@gmail.com" aria-label="email"><i class="fas fa-envelope p-3"></i></a>
                         <a href="https://www.facebook.com/settings?tab=account&section=username"  aria-label="facebook"><i class="fab fa-facebook p-3"></i>
-                        <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram p-3"  aria-label="instagram"></i></a>
+                        <a href="https://www.instagram.com/a_k_bhat_/" aria-label="instagram"><i class="fab fa-instagram p-3"  ></i></a>
                       </div>
                     </div>
                 </div>
@@ -248,9 +248,9 @@
                   <div class="row">
                     <div class="col-md-12 text-center text-white">
                       <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"  aria-label="Linkedin"><i class="fab fa-linkedin mr-2"></i></a>
-                      <a href="g.ananthakrishnabhat@gmail.com"  aria-label="email"><i class="fas fa-envelope mr-2"></i></a>
+                      <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope mr-2"></i></a>
                       <a href="https://www.facebook.com/settings?tab=account&section=username"  aria-label="facebook"><i class="fab fa-facebook mr-2"></i>
-                      <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram"  aria-label="instagram"></i></a>
+                      <a href="https://www.instagram.com/a_k_bhat_/" aria-label="instagram"><i class="fab fa-instagram"></i></a>
                       <p>Copyrights</p>
                     </div>
                   </div>
