--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   <div class="row">
                     <div class="col-md-12 text-center text-white">
                       <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"  aria-label="Linkedin"><i class="fab fa-linkedin mr-2"></i></a>
-                      <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope mr-2"></i></a>
+                      <a href="g.ananthakrishnabhat@gmail.com" aria-label="email"><i class="fas fa-envelope mr-2"></i></a>
                       <a href="https://www.facebook.com/settings?tab=account&section=username"  aria-label="facebook"><i class="fab fa-facebook mr-2"></i>
                       <a href="https://www.instagram.com/a_k_bhat_/" aria-label="instagram"><i class="fab fa-instagram"></i></a>
                       <p>Copyrights</p>
