--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
         <div class="row">
           <div class="col-md-12">
              <h1 class="text-center mt-5 text-white">CONTACT</h1>
-             <form class="p-5" id="form1" name="form1" onsubmit="return validate()" method="post" action="https://script.google.com/macros/s/AKfycbwUwKKhxQBvAb1Dp-gYVRD5V1i2EOb2MG6h2eSMB8LAu9JtGd52t-N_Q08Ggtn1d4OU/exec">
+             <form class="p-5" id="form1" name="form1" onsubmit="return validate()" method="post" action="https://api.web3forms.com/submit">
+              <input type="hidden" name="access_key" value="891505e5-ec62-44bd-bb65-4a6938e35222">
 
               <div class="form-row">
                 <div class="form-group col-md-6">
