--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section id="about" class="p-5">
         <div class="col-md-6 p-5 about">
-            <h1 class="ml-5 mt-5 text-white">ABOUT</h1>
+            <h1 class="mt-5 text-white">ABOUT</h1>
         </div>
         <div class="col-md-6 p-5 align-items-center about-info">
             <div class="align-items-center" >
