--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-md-4 mt-3 text-center">
                             <i class="fa fa-tv display-4 text-white pt-2"></i>
                             <div class="card-body">
-                              <h3 class="card-title text-white pt-1">FULL STACK WEB DEVELOPMENT<h6 class="text-white">(To be Available Soon)</h6></h3>
+                              <h3 class="card-title text-white pt-1">SOFTWARE DEVELOPMENT</h3>
                             </div>
                 </div>
                           
@@ -145,7 +145,7 @@
                         <img src="images/Screenshot 2024-09-05 123304.png" alt="img">
                       </div>
                       <div class="card-body">
-                        <h3 class="card-title text-center text-white">Gravity Cart E-Commerce Website<h6 class="text-white text-center">A Clone website of famous brand US POLO Assn. using basic HTML & CSS.</h6></h3>
+                        <h3 class="card-title text-center text-white">Gravity Cart<h6 class="text-white text-center">An E-Commerce Website using backend technologies like Node.js, Express.js and MongoDB</h6></h3>
                       </div></a>
                 </div>
 
@@ -154,7 +154,7 @@
                       <img src="images/Screenshot 2024-09-07 205105.png" alt="img">
                   </div>
                   <div class="card-body">
-                    <h3 class="card-title text-center text-white"><h6 class="text-white text-center">Simple User Management System using Express JS</h6></h3>
+                    <h3 class="card-title text-center text-white">User Management System<h6 class="text-white text-center">Simple User Management System using Express JS</h6></h3>
                   </div></a>
                 </div>
 
