--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col-md-6">
                     <h6>Hey Buddy ! I'm</h6>
                     <h3>ANANTHAKRISHNA BHAT G</h3>
-                    <h6>WEB DESIGNER<br><h6>Soon to be a Full Stack Developer</h6>
+                    <h6>WEB DESIGNER<br><h6>Passionate Software Developer with skillset of Javascript, Node.js, Express.js, MongooDB</h6>
                     <div class="row">
                       <div class="col-md-12 text-white">
                         <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"><i class="fab fa-linkedin p-3"></i></a>
