--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                       <div class="col-md-12 text-white">
                         <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"><i class="fab fa-linkedin p-3"></i></a>
                         <a href="g.ananthakrishnabhat@gmail.com"><i class="fas fa-envelope p-3"></i></a>
-                        <a href="https://www.facebook.com/settings?tab=account&section=username"><i class="fab fa-facebook p-3"></i>
+                        <a href="https://www.facebook.com/settings?tab=account&section=username"><i class="fab fa-github p-3"></i>
                         <a href="https://www.instagram.com/a_k_bhat_/"><i class="fab fa-instagram p-3"></i></a>
                       </div>
                     </div>
