--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col-md-6">
                     <h6>Hey Buddy ! I'm</h6>
                     <h3>ANANTHAKRISHNA BHAT G</h3>
-                    <h6>WEB DESIGNER<br><h6>Passionate Software Developer with skillset of Javascript, Node.js, Express.js, MongooDB</h6>
+                    <h6>Full Stack Developer<br><h6>Passionate Software Developer with skillset of Javascript, React.JS, Typescript, Node.js, Express.js, MongooDB, SQL</h6>
                     <div class="row">
                       <div class="col-md-12 text-white">
                         <a href="https://www.linkedin.com/in/ananthakrishna-bhat-5311611b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6arLyEDwSHm2T%2FqzAhELaw%3D%3D"><i class="fab fa-linkedin p-3"></i></a>
@@ -87,7 +87,7 @@
         </div>
         <div class="col-md-6 p-5 align-items-center about-info">
             <div class="align-items-center" >
-                <p class="text-white"> <strong class="text-white">An Engineering Graduate with almost 2 Years of Experience in Software Industry.</strong> with a great drive to learn and explore.Have basic knowledge of HTML,CSS,JS BOOTSTRAP. Currently<br>Looking forward to work on more projects which will improve my skills and help me to build a successful career</p>
+                <p class="text-white"> <strong class="text-white">An Engineering Graduate with almost 2 Years of Experience in Software Industry.</strong> with a great drive to learn and explore. Currently<br>Looking forward to work on more projects which will improve my skills and help me to build a successful career</p>
             </div>
   
         </div>
@@ -150,11 +150,11 @@
                 </div>
 
                 <div class="col-md-4 mt-3">
-                  <a href="https://github.com/ak-bhat/User-Management"><div class="card text-center  p-1">
+                  <a href="https://github.com/ak-bhat/User-Management-System-using-React"><div class="card text-center  p-1">
                       <img src="images/Screenshot 2024-09-07 205105.png" alt="img">
                   </div>
                   <div class="card-body">
-                    <h3 class="card-title text-center text-white">User Management System<h6 class="text-white text-center">Simple User Management System using Express JS</h6></h3>
+                    <h3 class="card-title text-center text-white">User Management System<h6 class="text-white text-center">An application using React.JS for frot-end and Node.js for Back-end</h6></h3>
                   </div></a>
                 </div>
 
