--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="text-center text-white pl-4 mt-5">EXPERIENCE</h1>
             <div class="row mt-3">
                 <div class="col-md-12 mt-3 text-center">
-                    <h3 class="text-white pt-3">Cognizant Technology Services<h6 class="text-white">2021-2023</h6></h3><h6 class="text-white">Almost 2 years of working experience. Worked in BPM Support Project. Joined on 2021 as Program Analyst Trainee and promoted to Programmer Analyst. </h6>
+                    <h3 class="text-white pt-3">Cognizant Technology Services<h6 class="text-white">2021-2023</h6></h3><h6 class="text-white">Almost 2 years of working experience. Worked in Global Support Project providing Application Support. Joined on 2021 as Program Analyst Trainee and promoted to Programmer Analyst. </h6>
                 </div>
             </div>        
         </div>
